fixes to ayim pages on small widths

--- a/AYIM/assets/ayim.scss
+++ b/AYIM/assets/ayim.scss
@@ -39,6 +39,6 @@
     width: 100%;
     padding-top: 15px;
     @include breakpoint(mobile) {
-        padding-top: 40px;
+        padding-top: 45px;
     }
 }
